# Agentic-RAG-Research-Assistant

./: .env.example  .gitignore  =24.0  Dockerfile  README.md  doc_registry.db  pyproject.toml  render.yaml  start.sh
src/research_assistant/: __init__.py  config.py  llm_factory.py  main.py  models.py
src/research_assistant/agents/: __init__.py  analyst_agent.py  orchestrator.py  retriever_agent.py  summarizer_agent.py  writer_agent.py
src/research_assistant/api/: __init__.py  server.py
src/research_assistant/ingestion/: __init__.py  embedder.py  loader.py  registry.py  splitter.py
src/research_assistant/retrieval/: __init__.py  bm25_index.py  reranker.py  retriever.py
src/research_assistant/static/: app.js  index.html  style.css
src/research_assistant/tools/: __init__.py  citation_tool.py  scholar_tool.py  search_tool.py
tests/: test_agents.py  test_api_endpoints.py  test_ingestion.py  test_llm_factory.py  test_retrieval.py
